--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,11 @@
 		"php": ">=7.0.0",
 		"curl/curl": ">=1.6.0"
 	},
+	"require-dev": {
+		"phpunit/phpunit": "~5.7.6"
+	},
 	"autoload": {
 		"classmap": [
-			"src/RiotAPI/Fixes",
 			"src/DataDragonAPI/Utils"
 		],
 		"psr-4": {
