--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	],
 	"require": {
 		"php": ">=7.0.0",
-		"curl/curl": ">=1.6.0"
+		"curl/curl": "~1.6.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~5.7.6"
