--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,10 +25,10 @@ before_script:
 test:7.0:
     image: php:7.0
     script:
-        - vendor/bin/phpunit -v --bootstrap phpunit.php --configuration phpunit.xml --coverage-text
+        - vendor/bin/phpunit -v --bootstrap phpunit.php --configuration phpunit.xml --coverage-text --colors=never
 
 # PHP7.1 tests
-test:7.1:
-    image: php:7.1
-    script:
-        - vendor/bin/phpunit -v --bootstrap phpunit.php --configuration phpunit.xml --coverage-text
+#test:7.1:
+#    image: php:7.1
+#    script:
+#        - vendor/bin/phpunit -v --bootstrap phpunit.php --configuration phpunit.xml --coverage-text
