Travis CI coverage support

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,6 @@ script:
 
 # If successfull, report coverage
 after_success:
+    - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+    - chmod +x ./cc-test-reporter
     - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
