Travis CI coverage support

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,9 @@ php:
 #    - '7.1'
 #    - nightly
 
-# Environment variables
-env:
-  global:
-    - CC_TEST_REPORTER_ID=$CODECLIMATE_REPO_TOKEN
-    - GIT_COMMITTED_AT=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then git log -1 --pretty=format:%ct; else git log -1 --skip 1 --pretty=format:%ct; fi)
+addons:
+  code_climate:
+    repo_token: $CODECLIMATE_REPO_TOKEN
 
 # Save cache of dependencies
 cache:
@@ -24,10 +22,7 @@ install:
 
 # Start tests
 script:
-    - vendor/bin/phpunit -v --bootstrap phpunit.php --configuration phpunit.xml --coverage-text --colors=never
+    - vendor/bin/phpunit -v --bootstrap phpunit.php --configuration phpunit.xml --coverage-text --coverage-clover $TRAVIS_BUILD_DIR/build/logs/clover.xml --colors=never
 
-# If successfull, report coverage
 after_success:
-    - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-    - chmod +x ./cc-test-reporter
-    - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
+  - vendor/bin/test-reporter -n --coverage-report=$TRAVIS_BUILD_DIR/build/logs/clover.xml --verbose
