--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 .idea/
+
+# Composer files
 vendor/
+composer.lock
+
+# Testing data
 tests/Coverage/
 tests/DummyData/GET_lol-test-endpoint-v0-save.json
+/tests/RiotAPI/Definition/cache-fcp/ 
+
+# Cache
 src/RiotAPI/cache/
-composer.lock
