--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
 	],
 	"require": {
 		"php": "^7.0.0",
-		"curl/curl": "^1.6.0"
+		"curl/curl": "^1.6.0",
+		"ext-json": "*",
+		"ext-curl": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "6.2.2",
