Travis build fix for pull requests

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,7 @@ jobs:
     include:
     - # identify pull requests by environment variable
         if: type = pull_request
-        env:
-            - BUILD_IS_PULL_REQUEST=1
+        env: BUILD_IS_PULL_REQUEST=1
 
 # Start tests
 script:
