Test fixes, DummyData for Tournament v4 endpoints (#26)
[LeagueAPI] Tournament test fixes + DummyData
[LeagueAPI] PHPDoc cleanup & fixes
[LeagueAPI] Removed some deprecated functions

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ jobs:
 
 # Start tests
 script:
-    - vendor/bin/phpunit -v --bootstrap phpunit.php --configuration phpunit.xml --coverage-text --coverage-clover $TRAVIS_BUILD_DIR/build/logs/clover.xml --colors=never
+    - vendor/bin/phpunit -v --bootstrap phpunit.php --configuration phpunit_LeagueAPI.xml --coverage-text --coverage-clover $TRAVIS_BUILD_DIR/build/logs/clover.xml --colors=never
 
 # Submit coverage results
 after_success:
