--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,9 @@
 	],
 	"require": {
 		"nette/utils": "^2.5",
+		"guzzlehttp/guzzle": "^6.3",
 		"php": "^7.0.0",
-		"curl/curl": "^1.6.0",
-		"ext-json": "*",
-		"ext-curl": "*"
+		"ext-json": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "6.2.2",
