--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ php:
     - nightly
 #    - hhvm
 
+matrix:
+    fast_finish: true
+    allow_failures:
+        - php: nightly
+
 # Allow addons
 addons:
     code_climate:
