Created missing DummyData, updated TravisCI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,9 @@ matrix:
 
 # Allow addons
 addons:
+    apt:
+        packages:
+            - libonig-dev
     code_climate:
         repo_token: $CODECLIMATE_REPO_TOKEN
 
