--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
 		"nette/utils": "^2.5",
 		"guzzlehttp/guzzle": "^6.3",
 		"symfony/console": "^v3",
-		"php": "^7|^8",
+		"symfony/cache": "^3",
+		"psr/cache": "^1.0",
+		"php": "^7.0|^8.0",
 		"ext-json": "*"
 	},
 	"require-dev": {
